<resources>
    <string name="app_name">Sabbia</string>
    <string name="app_version">Sabbia 1.0.0 - developers beta</string>
    <!-- main fragments -->
    <string name="title_home">Home</string>
    <string name="title_search">Cerca</string>
    <!-- beach history -->
    <string name="home_last_activities_label">Attività corrente</string>
    <string name="item_title">Title</string>
    <string name="item_subtitle">Subtitle</string>
    <!-- current activity -->
    <string name="home_current_activity_date">2 Luglio, 2020</string>
    <string name="home_current_activity_distance_num">2,5m</string>
    <string name="home_current_activity_distance_label">Distanziamento sociale</string>
    <string name="home_current_activity_beach_label">Spiaggia</string>
    <string name="home_current_activity_beach_name">S\'archittu</string>
    <string name="home_current_activity_time_elapsed_label">Permanenza</string>
    <string name="home_current_activity_time_elapsed">3h</string>
    <string name="home_current_activity_parking_label">Parcheggio</string>
    <string name="home_current_activity_parking">Gratuito</string>
    <string name="title_activity_beach_detail">BeachDetail</string>
    <string name="home_current_activity_button_text">Interrompi permanenza</string>
    <!-- home tab -->
    <string name="home_tab_1">Recenti</string>
    <string name="home_tab_2">Salvate</string>
    <string name="home_tab_3">Suggerite</string>
    <!-- no activity -->
    <string name="home_no_activity_title">Non sei registrato in nessuna spiaggia</string>
    <string name="home_no_activity_description">Vai su \'cerca\' per trovare la spiaggia in cui registarti o per salvale per un secondo momento.</string>
    <!-- detail page -->
    <string name="detail_title_placeholder">Nome spiaggia</string>
    <string name="detail_tab_text_1">Indici</string>
    <string name="detail_tab_text_2">Bacheca</string>
    <string name="detail_index_start_from_label">Indici a partire da:</string>
    <string name="detail_index_people_label">Frequentazione:</string>
    <string name="detail_index_parking_label">Parcheggi:</string>
    <string name="detail_index_sea_label">Qualità spiaggia:</string>
    <string name="people_index_social_distancing">Distanziamento sociale</string>
    <!-- people indices -->
    <string name="people_index_people_category">Tipo di frequentatori</string>
    <string name="people_index_people_gender">Genere</string>
    <string name="parking_index_avg_distance">Distanza dalla spiaggia</string>
    <!-- parking index -->
    <string name="parking_index_payment">A pagamento</string>
    <string name="quality_index_sea">Valutazione della spiaggia</string>
    <!-- sea quality index -->
    <string name="index_placeholder_percentage">45%</string>
    <!-- index measures placeholder -->
    <string name="index_placeholder_meters">2,5m</string>
    <string name="index_placeholder_rating">3.1 / 5</string>
    <string name="detail_sign_toggle_off"> </string>
    <!-- detail control center -->
    <string name="detail_sign_toggle_on"> </string>
    <string name="detail_map_toggle"> </string>
    <string name="detail_save_toggle_off"> </string>
    <string name="detail_save_toggle_on"> </string>
    <string name="search_saved_label">Spiagge salvate</string>
    <!-- search tab -->
    <string name="search_clean">Recensiti di recente</string>
    <string name="serchview_hint_text">Dove vorresti andare?</string>
    <!-- searchview -->
    <string name="serchview_hint_title">Non trovi ciò che cerchi?</string>
    <string name="serchview_hint_description">Usa il nome della spiaggia per intero</string>
    <string name="serchview_hint_button">Segnala spiaggia mancante</string>
    <string name="title_activity_beach_active"> </string>
    <!-- search active -->
    <string name="beach_image">beach image</string>
    <string name="header_image">header image</string>
    <string name="search_icon">search icon</string>
    <string name="settings_title">Impostazioni</string>
    <!-- settings -->
    <string name="settings_user_data_section_title">Dati anagrafici:</string>
    <string name="settings_links_section_title">Link utili:</string>
    <string name="settings_user_data_section_item">Modifica i tuoi dati</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_donate">Dona</string>
    <string name="settings_rate">Lascia una recensione</string>
    <string name="settings_telegram_channel">Canale Telegram</string>
    <string name="settings_source">Repository Github</string>
    <string name="dialog_interrupt_permanence_title">Interrompere la permanenza in spiaggia?</string>
    <!-- dialogs -->
    <string name="dialog_interrupt_permanence_text">Ricorda di lasciare la spiaggia pulita</string>
    <string name="dialog_generic_confirm_button_title">Conferma</string>
    <string name="control_center_subscribe_label">Registrati</string>
    <string name="control_center_view_in_map_label">Mappa</string>
    <string name="control_center_save_label">Salva</string>
    <string-array name="index_start_spinner_options">
        <item>Oggi</item>
        <item>Ultimi settimana</item>
        <item>Ultimo mese</item>
        <item>Dall\'inizio</item>
    </string-array>
</resources>