<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingBottom="40dp"
    android:layout_height="wrap_content">

    <View
        android:layout_width="60dp"
        android:layout_height="4dp"
        android:background="@drawable/close_dialog"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        style="@style/BaseTheme.SnackBarTitle"
        android:text="@string/dialog_interrupt_permanence_title"/>

    <TextView
        style="@style/BaseTheme.SnackBarMessage"
        android:text="@string/dialog_interrupt_permanence_text"/>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/BaseTheme.DialogButton"
        android:text="@string/dialog_generic_confirm_button_title"/>


</LinearLayout>