<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_display_heavy"
            android:textSize="23sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/serchview_hint_title" />

        <TextView
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_display_medium"
            android:alpha="0.7"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/serchview_hint_description" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_display_heavy"
            android:textColor="@color/seaGradientEnd"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/serchview_hint_button" />


</LinearLayout>