<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- social distancing -->
        <soup.neumorphism.NeumorphCardView
            app:cardBackgroundColor="?attr/elevationOverlayColor"
            style="@style/BaseTheme.IndexCard">

            <LinearLayout
                style="@style/BaseTheme.IndexContainer">

                <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_width="110dp"
                    android:layout_height="110dp">

                    <ProgressBar
                        style="@style/BaseTheme.IndexProgressCircle"
                        android:max="100"
                        android:progress="25" />

                    <TextView
                        style="@style/BaseTheme.IndexProgressCircleLabel"
                        android:text="@string/index_placeholder_meters" />

                </RelativeLayout>


                <TextView
                    style="@style/BaseTheme.IndexLabel"
                    android:text="@string/parking_index_avg_distance" />

            </LinearLayout>

        </soup.neumorphism.NeumorphCardView>



        <!-- parking distance  -->
        <soup.neumorphism.NeumorphCardView
            app:cardBackgroundColor="?attr/elevationOverlayColor"
            style="@style/BaseTheme.IndexCard">

            <LinearLayout
                style="@style/BaseTheme.IndexContainer">

                <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_width="110dp"
                    android:layout_height="110dp">

                    <ProgressBar
                        style="@style/BaseTheme.IndexProgressCircle"
                        android:max="100"
                        android:progress="45" />

                    <TextView
                        style="@style/BaseTheme.IndexProgressCircleLabel"
                        android:text="@string/index_placeholder_percentage" />

                </RelativeLayout>


                <TextView
                    style="@style/BaseTheme.IndexLabel"
                    android:text="@string/parking_index_payment" />

            </LinearLayout>

        </soup.neumorphism.NeumorphCardView>

    </LinearLayout>
</HorizontalScrollView>