<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        style="@style/BaseTheme.Card"
        android:layout_marginBottom="60dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_orange_coral_bg">
            
            <LinearLayout
                android:id="@+id/root_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:minHeight="50dp"
                android:padding="25dp">
                
                <!-- date -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/sf_display_bold"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:text="@string/home_current_activity_date"
                    tools:ignore="RtlCompat" />
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:baselineAligned="false">

                    <!-- left column -->
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:layout_marginBottom="10dp"
                        android:minHeight="100dp"
                        tools:ignore="RtlSymmetry">

                        <TextView
                            android:id="@+id/social_distance_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewStart"
                            android:fontFamily="@font/sf_display_bold"
                            android:textColor="@android:color/white"
                            android:textSize="35sp"
                            android:layout_marginTop="40dp"
                            android:text="@string/home_current_activity_distance_num"
                            tools:ignore="RtlCompat" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewStart"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/sf_display_bold"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:layout_marginBottom="-15dp"
                            android:layout_alignBottom="@id/social_distance_tv"
                            android:text="@string/home_current_activity_distance_label"
                            tools:ignore="RtlCompat" />

                    </RelativeLayout>

                    <!-- right column -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:orientation="vertical"
                        android:minHeight="100dp">

                        <!-- beach -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewEnd"
                            android:fontFamily="@font/sf_display_medium"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:layout_marginTop="15dp"
                            android:text="@string/home_current_activity_beach_label"
                            tools:ignore="RtlCompat" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewEnd"
                            android:fontFamily="@font/sf_display_bold"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:text="@string/home_current_activity_beach_name"
                            tools:ignore="RtlCompat" />

                        <!-- time elapsed -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewEnd"
                            android:fontFamily="@font/sf_display_medium"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:layout_marginTop="15dp"
                            android:text="@string/home_current_activity_time_elapsed_label"
                            tools:ignore="RtlCompat" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewEnd"
                            android:fontFamily="@font/sf_display_bold"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:text="@string/home_current_activity_time_elapsed"
                            tools:ignore="RtlCompat" />

                        <!-- parking -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewEnd"
                            android:fontFamily="@font/sf_display_medium"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:layout_marginTop="15dp"
                            android:text="@string/home_current_activity_parking_label"
                            tools:ignore="RtlCompat" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewEnd"
                            android:fontFamily="@font/sf_display_bold"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:text="@string/home_current_activity_parking"
                            tools:ignore="RtlCompat" />

                    </LinearLayout>


                    
                </LinearLayout>
                
            </LinearLayout>
            
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>