<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="0dp"
    android:weightSum="1">

    <!-- sign here -->
    <LinearLayout
        style="@style/BaseTheme.ControlCenterContainer">

        <ToggleButton
            android:id="@+id/btn_subscribe"
            android:text=""
            android:textOn=""
            android:textOff=""
            android:background="@drawable/control_center_subscribe_selector"
            style="@style/BaseTheme.ControlCenterToggle" />

        <TextView
            style="@style/BaseTheme.ControlCenterLabel"
            android:text="@string/control_center_subscribe_label"/>

    </LinearLayout>

    <!-- show in map -->
    <LinearLayout
        style="@style/BaseTheme.ControlCenterContainer">

        <ToggleButton
            android:id="@+id/btn_view_in_map"
            android:text=""
            android:textOn=""
            android:textOff=""
            android:background="@drawable/control_center_view_in_map_selector"
            style="@style/BaseTheme.ControlCenterToggle" />

        <TextView
            style="@style/BaseTheme.ControlCenterLabel"
            android:text="@string/control_center_view_in_map_label"/>


    </LinearLayout>

    <!-- save -->
    <LinearLayout
        style="@style/BaseTheme.ControlCenterContainer">

        <ToggleButton
            android:id="@+id/btn_save"
            android:text=""
            android:textOn=""
            android:textOff=""
            android:background="@drawable/control_center_save_selector"
            style="@style/BaseTheme.ControlCenterToggle" />

        <TextView
            style="@style/BaseTheme.ControlCenterLabel"
            android:text="@string/control_center_save_label"/>

    </LinearLayout>

</LinearLayout>