<?xml version="1.0" encoding="utf-8"?>
<soup.neumorphism.NeumorphCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="230dp"
    android:layout_height="130dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    style="@style/BaseTheme.BeachNeumorphismCard">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/card_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_placeholder"
            android:contentDescription="@string/beach_image" />

        <LinearLayout
            android:id="@+id/root_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="bottom|end"
            android:padding="20dp"
            android:orientation="vertical"
            android:background="@drawable/saved_card_overlay_bg">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:fontFamily="@font/sf_display_bold"
                android:textSize="16sp"
                android:textAlignment="viewEnd"
                android:text="@string/item_title" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:fontFamily="@font/sf_display_medium"
                android:textSize="12sp"
                android:textAlignment="viewEnd"
                android:text="@string/item_subtitle" />

        </LinearLayout>

    </RelativeLayout>


</soup.neumorphism.NeumorphCardView>