<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    style="@style/BaseTheme.Card"
    android:clickable="true"
    android:layout_margin="0dp"
    android:focusable="true"
    app:cardUseCompatPadding="true"
    android:foreground="?android:attr/selectableItemBackground">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:minHeight="100dp">

        <ImageView
            android:id="@+id/card_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_placeholder"
            android:contentDescription="@string/beach_image" />

        <LinearLayout
            android:id="@+id/root_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="bottom|start"
            android:padding="20dp"
            android:orientation="vertical"
            android:background="@drawable/full_width_card_overlay_bg">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:fontFamily="@font/sf_display_bold"
                android:textSize="16sp"
                android:textAlignment="viewStart"
                android:text="@string/item_title" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:fontFamily="@font/sf_display_medium"
                android:textSize="12sp"
                android:textAlignment="viewStart"
                android:text="@string/item_subtitle" />
        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>