<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- start from -->
        <TextView
            style="@style/BaseTheme.Label"
            android:text="@string/detail_index_start_from_label"
            android:layout_marginBottom="0dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BaseTheme.Card">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </androidx.cardview.widget.CardView>


        <!-- people -->
        <TextView
            style="@style/BaseTheme.Label"
            android:text="@string/detail_index_people_label"
            android:layout_marginBottom="0dp"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:minWidth="120dp"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    style="@style/BaseTheme.Card" />

                <androidx.cardview.widget.CardView
                    android:minWidth="120dp"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    style="@style/BaseTheme.Card" />

                <androidx.cardview.widget.CardView
                    android:minWidth="120dp"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    style="@style/BaseTheme.Card" />

            </LinearLayout>
        </HorizontalScrollView>

        <!-- parking -->
        <TextView
            style="@style/BaseTheme.Label"
            android:text="@string/detail_index_parking_label"
            android:layout_marginBottom="0dp"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:minWidth="120dp"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    style="@style/BaseTheme.Card" />

                <androidx.cardview.widget.CardView
                    android:minWidth="120dp"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    style="@style/BaseTheme.Card" />

            </LinearLayout>

        </HorizontalScrollView>

        <!-- parking -->
        <TextView
            style="@style/BaseTheme.Label"
            android:text="@string/detail_index_sea_label"
            android:layout_marginBottom="0dp"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:minWidth="120dp"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    style="@style/BaseTheme.Card" />


            </LinearLayout>

        </HorizontalScrollView>



    </LinearLayout>

</FrameLayout>

